# sol-climber

./: Cargo.toml  LICENSE  README.md  makefile
assets/characters/: Character.glb  MainCharacter.glb
assets/terrains/: MountainPath.glb
brigde/: Cargo.toml
brigde/idls/: sol_climber_program.json
brigde/src/: main.rs
brigde/src/application/: mod.rs
brigde/src/config/: mod.rs
brigde/src/domain/: mod.rs
brigde/src/infrastructure/: mod.rs
brigde/src/infrastructure/anchor/: mod.rs
brigde/src/infrastructure/ntex_http/: mod.rs  routes.rs
game/src/resources/: camera_setting.rs
game/src/systems/: core.rs
nft-collections/: PinkBackpack.json  RedBackpack.json  RedHat.json  TrekkingPoles#1.json
program/: Anchor.toml  package.json
program/programs/sol-climber-program/: Cargo.toml
program/programs/sol-climber-program/src/: errors.rs  lib.rs
program/tests/: sol-climber-program.ts
sol-climber/: Cargo.toml  LICENSE
sol-climber-game/src/: main.rs
sol-climber-game/src/components/: camera.rs  light.rs
sol-climber-game/src/systems/: mod.rs
sol-climber-program/: Anchor.toml
sol-climber-program/programs/sol-climber-program/: Cargo.toml
sol-climber-program/programs/sol-climber-program/src/: lib.rs
sol-climber-program/tests/: sol-climber-program.ts
sol-climber/assets/characters/: MainCharacter.glb
sol-climber/assets/terrains/: DeathZone.glb  SummitZoneMesh.glb  Terrain.glb  TerrainMesh.glb
sol-climber/src/: lib.rs  main.rs
sol-climber/src/entities/: player.rs
sol-climber/src/resources/: camera.rs
sol-climber/src/systems/: camera.rs  mod.rs  player_death.rs  summit_zone.rs  ui.rs
sol-climber/src/terrains/: death_zone.rs  map.rs  mod.rs  skybox.rs  sun.rs
src/: main.rs
src/entities/: mod.rs  player.rs
src/resources/: camera.rs  mod.rs
src/systems/: camera.rs  fog.rs  light.rs  map.rs  mod.rs  sun.rs  terrain.rs
(+8 files in other folders)
