[package]
name = "sol-climber"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = "0.16"
bevy_rapier3d = { version = "0.30.0", features = ["simd-stable"] }
bevy-inspector-egui = "0.30.0"
bevy_skybox = "0.6.0"
serde_json = "1.0.140"
serde = { version = "1.0.219", features = ["derive"] }
ureq = "3.0.11"
# reqwest = { version = "0.12.15", features = ["json"] }
# solana-client = "2.2.7"
# solana-sdk = "2.2.2"
